# seekmind

./: .gitignore  Agents.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-desktop.yml
docs/: 0需求讨论(2026-05-21).md  10-国际化(i18n)实施方案(2026-05-23).md  11-0.4x第二批开发顺序(2026-05-24).md  12-0.4x第三批开发顺序(2026-05-24).md  13-0.4x收口清单(2026-05-24).md  14-UI 优化设计规范 (桌面端原生化)(2026-05-24).md  15-文档目录树形改造方案(2026-05-24).md  16-拖拽导入与虚拟目录方案(2026-05-24).md  17-索引目录树组件复用重构方案(2026-05-24).md  18-0.5x文档预览与定位增强开发计划(2026-05-24).md  19-0.5x第一批开发顺序(2026-05-24).md  1MVP建议(2016-05-21).md  20-Python侧任务调用经验规范(2026-05-24).md  21-Chunk支持预览方案讨论.md  22-结构化Chunk预览第一阶段实施方案(2026-05-26).md  23-0.6x基于来源问答实施方案(2026-05-31).md  24-多轮问答指代消解与查询改写方案(2026-05-31).md  25-设置页瘦身与历史记录归口方案(2026-05-31).md  26-0.7x知识组织能力实施方案(2026-06-01).md  27-索引状态当前文件实时展示方案(2026-06-02).md  28-索引状态面板深色主题UI改造方案(2026-06-02).md  29-文档切片页目录切换入口方案(2026-06-02).md  2MVP后阶段规划(2026-05-21).md  3 使用python切块(2026-05-22).md  3-0.3x搜索体验增强实施方案(2026-05-23).md  30-0.7x完成清单vs当前代码差异清单(2026-06-03).md  31-0.7x未完成项收口方案(2026-06-03).md  32-0.8x知识问答增强方案(2026-06-03).md  33-Python侧RAG核心编排迁移方案(2026-06-03).md  34-DocMind-Python侧RAG-Graph设计(2026-06-04).md  34-SeekMind-Python侧RAG-Graph设计(2026-06-04).md  35-RAG回归评测集(2026-06-05).md  36-0.8x格式扩展缺口清单(2026-06-05).md  37-ChatGPT对db.rs拆分建议(2026-06-06).md  38-db.rs拆分第一轮计划(2026-06-05).md  39-搜索面板样式优化建议(2026-06-06).md  4 Python解析架构设计.md  40-OCR改为Vision方案(2026-06-06).md  41-SeekMind UI原型对齐实施方案(2026-06-07).md  42-阶段7对照表(2026-06-08).md  (+28 more)
docs/reports/: seekmind-baseline.json
parser/: requirements.txt
parser/docmind_parser/: __init__.py  __main__.py  models.py  parser.py  pdf_ocr.py
parser/seekmind_parser/: __init__.py  __main__.py  models.py  parser.py
parser/tests/: test_rag_retrieval.py
scripts/: build-parser-sidecar.mjs  build-parser-sidecar.sh  package-semantic-model.mjs  seekmind-runtime-env.mjs  semantic-warmup.mjs  tauri-build.mjs  tauri-dev.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/docmind/: commands.rs  data.rs  file_ops.rs  mod.rs  models.rs  search.rs  sidecar.rs  vision_ocr.rs
src-tauri/src/docmind/collections/: commands.rs
src-tauri/src/docmind/parser/: client.rs  mod.rs  types.rs
src-tauri/src/docmind/qa/: cancel.rs  client.rs  commands.rs  context.rs  mod.rs  models.rs  python_client.rs
src-tauri/src/docmind/semantic/: client.rs  commands.rs  embedding.rs  mod.rs  models.rs  store.rs
src-tauri/src/docmind/storage/: db.rs  fulltext.rs  indexer.rs  mod.rs  scanner.rs  types.rs
src-tauri/src/docmind/storage/db/: collections.rs  dirs.rs  documents.rs  qa.rs  rows.rs  schema.rs  search.rs  settings.rs  tags.rs  task.rs  util.rs
src-tauri/src/seekmind/: commands.rs  file_ops.rs  mod.rs  models.rs  process_utils.rs  runtime_paths.rs  sidecar.rs  vision_ocr.rs
src-tauri/src/seekmind/collections/: commands.rs
src-tauri/src/seekmind/parser/: client.rs  mod.rs  types.rs
src-tauri/src/seekmind/qa/: commands.rs  mod.rs  python_client.rs
src-tauri/src/seekmind/semantic/: client.rs  commands.rs  download.rs  mod.rs  store.rs  vector_store.rs
src-tauri/src/seekmind/storage/: db.rs  fulltext.rs  indexer.rs  scanner.rs  types.rs
src-tauri/src/seekmind/storage/db/: collections.rs  dirs.rs  documents.rs  qa.rs  rows.rs  schema.rs  search.rs  settings.rs  tags.rs  task.rs  util.rs
src/components/: SplitPane.vue  SvgIcon.vue
src/composables/: useIndexDirTree.ts  useIndexDirs.ts  useInfoMessage.ts  useQuickAccessData.ts  useSidebarState.ts  useTheme.ts
src/i18n/: index.ts
src/locales/: en.json  zh-CN.json
src/pages/: AppCollections.vue  AppQa.vue  AppSearch.vue  ChunksPage.vue  LibraryPage.vue  SettingsPage.vue  StatusPage.vue
src/router/: index.ts
src/services/: docmindApi.ts  seekMindApi.ts
src/styles/: icons.css
src/types/: SeekMind.ts  docmind.ts
src/utils/: citation.ts  dateFormat.ts  qaConfigEvents.ts  quickAccessEvents.ts
ui-prototype/: DocMindChunksRedesign.vue  DocMindRedesign.vue  docmind_mvp_prototype.jsx  docmind_redesign.html
ui-prototype/chunk/: docmind_redesign.html
ui-prototype/emoji_replace/: SVG 图标系统集成步骤.md  SearchHighlightWithIcons.vue  SearchResultCardWithIcons.vue  SvgIcon.vue  icons.css  图标系统使用指南.md
(+61 files in other folders)
