[package]
name = "SeekMind"
version = "0.1.0"
description = "SeekMind local document search tool"
authors = ["Yang Zhao"]
edition = "2021"
default-run = "SeekMind"

[lib]
name = "seekmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
ignore = "0.4"
num_cpus = "1"
pinyin = "0.10"
tauri-plugin-dialog = "2"
notify = "8"
dirs = "6"
infer = "0.19"
libc = "0.2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
window-vibrancy = "0.6"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"
tantivy = "0.24"
wait-timeout = "0.2"
sha2 = "0.10"
libsqlite3-sys = "0.30.1"
sqlite-vec = "0.1.9"

[target.'cfg(target_os = "macos")'.dependencies]
# Keep Apple runtime bindings macOS-only so Windows builds do not pull in objc2 transitively.
block2 = "0.6.2"
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSBitmapImageRep", "NSColor", "NSGraphics", "NSGraphicsContext", "NSImage", "NSImageRep", "NSOpenPanel", "NSPanel", "NSResponder", "NSView", "NSWindow", "NSWorkspace", "objc2-core-graphics"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSData", "NSError", "NSGeometry", "NSLocale", "NSString", "NSURL", "objc2-core-foundation"] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = ["CGImage"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Keep Windows OCR bindings Windows-only so macOS builds stay on the existing Vision framework path.
windows = { version = "0.61.3", features = ["Foundation", "Globalization", "Graphics_Imaging", "Media_Ocr", "Storage", "Storage_Streams", "Win32_Foundation", "Win32_System_WinRT"] }
